--- a/src/scss/Scoot/home/_header.scss
+++ b/src/scss/Scoot/home/_header.scss
@@ -109,6 +109,7 @@
     @include m.tablet { 
         flex-direction: row;
         align-items: center;
+        gap: 3.2rem;
     }
 
     &__enlace {
