--- a/src/scss/Scoot/home/_features.scss
+++ b/src/scss/Scoot/home/_features.scss
@@ -17,8 +17,6 @@
         }
 
         @include m.desktop { 
-            max-width: 111rem;
-            margin: 0 auto;
             gap: 16rem;
         }
     }
@@ -32,7 +30,6 @@
     
     @include m.desktop { 
         flex-direction: row;
-        align-items: center;
         justify-content: space-between;
     }
 
@@ -82,7 +79,7 @@
             }
 
             @include m.desktop-xl { 
-                left: -112%;
+                left: -113%;
             }
         }
     }
@@ -90,8 +87,13 @@
     &:nth-child(3) .feature-card__imagen-c {
 
         &::before {
-            top: 7.5rem;
-            right: -37rem;
+            top: -0.5rem;
+            right: -52.5rem;
+
+            @include m.tablet { 
+                right: -37rem;
+                top: 7.5rem
+            }
 
             @include m.tablet-xl { 
                 right: -28rem;
@@ -99,7 +101,6 @@
 
             @include m.desktop { 
                 right: -53rem;
-                top: 8rem;
             }
 
         }
@@ -114,7 +115,7 @@
             background-repeat: no-repeat;
             background-size: contain;
             width: 73.5rem;
-            height: 13.8rem;
+            height: 14.8rem;
             position: absolute;
             top: 66.8%;
 
@@ -152,7 +153,7 @@
             }
 
             @include m.desktop-xl { 
-                right: -112%;
+                right: -113%;
             }
         }
 
@@ -189,9 +190,12 @@
         text-align: center;
         padding: 0 3.2rem;
 
+        @include m.telefono { 
+            padding: 0 9.8rem;
+        }
+
         @include m.tablet { 
             gap: 5rem;
-            padding: 0 9.8rem;
         }
 
         @include m.desktop { 
