--- a/src/scss/Scoot/about/_about.scss
+++ b/src/scss/Scoot/about/_about.scss
@@ -85,6 +85,9 @@
             bottom: 3.2rem;
             right: -41rem;
             background-position: right;
+            animation-name: updown;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
 
             @include m.tablet { 
                 right: 0;
@@ -130,7 +133,7 @@
         }
 
         @include m.desktop { 
-            width: 445px;
+            width: 44.5rem;
         }
     }
 
@@ -163,7 +166,7 @@
 
         @include m.desktop { 
             gap: 2.4rem;
-            width: 445px;
+            width: 44.5rem;
             padding: 0;
             text-align: left;
         }
