--- a/src/scss/Scoot/home/_features.scss
+++ b/src/scss/Scoot/home/_features.scss
@@ -117,9 +117,13 @@
             width: 73.5rem;
             height: 14.8rem;
             position: absolute;
-            top: 66.8%;
+            top: 53%;
+            animation-name: updown;
+            animation-duration: 2s;
+            animation-iteration-count: infinite;
 
             @include m.tablet { 
+                top: 66.8%;
                 right: 0;
                 background-position: right;
                 height: 14.8rem;
@@ -162,7 +166,7 @@
         }
 
         @include m.desktop { 
-            width: 450px;
+            width: 44.5rem;
         }
     }
 
@@ -202,7 +206,7 @@
             padding: 0;
             align-items: flex-start;
             text-align: left;
-            width: 44rem;
+            width: 44.5rem;
             gap: 0;
         }
     }
