--- a/src/scss/Scoot/home/_header.scss
+++ b/src/scss/Scoot/home/_header.scss
@@ -15,6 +15,7 @@
 
     &__barra {
         display: flex;
+        flex-direction: row-reverse;
         justify-content: space-between;
         align-items: center;
         max-width: 111rem;
@@ -24,6 +25,7 @@
         @include m.tablet { 
             gap: 5.8rem;
             padding: 2.2rem 3.9rem;
+            flex-direction: row;
         }
 
         @include m.desktop { 
@@ -36,6 +38,7 @@
     }
 
     &__logo {
+        margin: 0 auto;
         img {
             width: 7.5rem;
             height: 2rem;
